Updated swagger doc
